<resources>
    <string name="app_name">EjemplosIntent</string>
    <string name="call">Llamar</string>
    <string name="email">Email</string>
    <string name="share">Compartir</string>
    <string name="browser">Navegador</string>
    <string name="take_picture">Tomar Fotor</string>
    <string name="change_activity">Cambiar Activity</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="twitter">Twitter</string>
    <string name="waze">Waze</string>
    <string name="streetview">Street View</string>
    <string name="add_event">Add Event</string>
</resources>
