<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/font_title"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_phone"
                android:background="@android:color/transparent"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_share"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/take_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_camera"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/change_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_screen"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_email"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/browser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnBrowser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:src="@drawable/ic_browser"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <TextView android:text="@string/twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="@dimen/medium_font"/>

            <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:src="@drawable/ic_twitter"
                android:background="@android:color/transparent"/>
        </LinearLayout>

            </LinearLayout>

</ScrollView>